Switch to revealjs presentation type

--- a/Presentations/2025-01-31/Math3_Presentation.qmd
+++ b/Presentations/2025-01-31/Math3_Presentation.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Math 3 Presentation"
 author: "Nehemias Ulloa"
-format: beamer
+format: revealjs
 ---
 
 ```{r setup, include=FALSE}
@@ -15,6 +15,9 @@ mlesion <- mlesions %>%
 ```
 
 
+## About Me
+
+-   Nehemias Ulloa
 
 
 ## About Me
