Make it self-contained

--- a/Presentations/2025-01-31/Math3_Presentation.qmd
+++ b/Presentations/2025-01-31/Math3_Presentation.qmd
@@ -1,7 +1,10 @@
 ---
 title: "KCHS Math Presentation"
 author: "Nehemias Ulloa"
-format: revealjs
+format: 
+  revealjs:
+    embed-resources: true
+    self-contained-math: true
 ---
 
 ```{r setup, include=FALSE}
