--- a/Presentations/2025-01-31/Math3_Presentation.qmd
+++ b/Presentations/2025-01-31/Math3_Presentation.qmd
@@ -75,8 +75,7 @@ mlesion <- mlesions %>%
 ## What Have I Done With Statistics
 
 ::: {.incremental}
-+ CVB (Center for Veterinary Biologics)
-  - USDA - MRP - APHIS - VS
++ USDA - MRP - APHIS - VS- CVB (Center for Veterinary Biologics)
   - DoE (Design of Experiments)
 + After, Inc.
   - Shiny Developer
@@ -103,34 +102,33 @@ mlesion <- mlesions %>%
   - Summary Statistics
   - Spatial Statistics
   - Sabermetrics
-  
+:::
+
+
+## What Else Can Be Done?
+
+::: {.incremental}
 + Tech Industry
   - AB Testing
   - Really Simple Problems with LOTS of Data
-:::
-
-
-## What Else Can Be Done?
-
-::: {.incremental}
+  
 + Statistical Graphics
   - What is the best way to present this data?
   - Case Study - Shiny App
     *[Google Sheet](https://docs.google.com/spreadsheets/d/14DQFoUMEDOaiDwJbfivyRSpJ2rijGwO-wHohUgCWDIk/edit?usp=sharing)
-    *![ ](Figures/GoogleSheetScreenshot.png)
+    
   
 :::
 
 
-## What Else Can Be Done?
+## Case Study in Statistical Graphics
 
 ::: {.incremental}
-+ Statistical Graphics
-  - What is the best way to present this data?
-  - Case Study - Shiny App
-    *[Google Sheet](https://docs.google.com/spreadsheets/d/14DQFoUMEDOaiDwJbfivyRSpJ2rijGwO-wHohUgCWDIk/edit?usp=sharing)
-    *[Shiny App Code](https://github.com/nulloa/fortnitefridayShiny)
-    *[Shiny App](https://nehemiasulloa.shinyapps.io/fortnitefridayShiny/)
++ Shiny App
+  - ![ ](Figures/GoogleSheetScreenshot.png)
+  - [Google Sheet](https://docs.google.com/spreadsheets/d/14DQFoUMEDOaiDwJbfivyRSpJ2rijGwO-wHohUgCWDIk/edit?usp=sharing)
+  - [Shiny App Code](https://github.com/nulloa/fortnitefridayShiny)
+  - [Shiny App](https://nehemiasulloa.shinyapps.io/fortnitefridayShiny/)
   
 :::
 
