--- a/Presentations/2025-01-31/Math3_Presentation.qmd
+++ b/Presentations/2025-01-31/Math3_Presentation.qmd
@@ -79,7 +79,7 @@ mlesion <- mlesions %>%
   - DoE (Design of Experiments)
 + After, Inc.
   - Shiny Developer
-+ Seasonal Disease Prediction
++ Disease Outbreak Prediction
   - Bayesian Statistics in Functional Form Prediction
   
 :::  
