--- a/Presentations/2025-01-31/Math3_Presentation.qmd
+++ b/Presentations/2025-01-31/Math3_Presentation.qmd
@@ -89,7 +89,7 @@ mlesion <- mlesions %>%
 
 ::: {.incremental}
 + Relationship Quality Estimation
-  - Polynomial Regression
+  - Polynomial Regression with Dyadic Data
 + Iowa Monarch Conservation Consortium
   - Numerical Summaries and figures
   
