Add MM to slide

--- a/Presentations/2025-01-31/Math3_Presentation.qmd
+++ b/Presentations/2025-01-31/Math3_Presentation.qmd
@@ -91,7 +91,9 @@ mlesion <- mlesions %>%
 + Relationship Quality Estimation
   - Polynomial Regression with Dyadic Data
 + Iowa Monarch Conservation Consortium
-  - Numerical Summaries and figures
+  - Numerical Summaries and Figures
++ March Madness
+  - Use Models to Predict Game Winners
   
 :::
 
