--- a/Presentations/2025-01-31/Math3_Presentation.qmd
+++ b/Presentations/2025-01-31/Math3_Presentation.qmd
@@ -121,14 +121,12 @@ mlesion <- mlesions %>%
 + Tech Industry
   - AB Testing
   - Really Simple Problems with LOTS of Data
-  - MAchine Learning/AI
+  - Machine Learning/AI
   
 + Statistical Graphics
   - What is the best way to present this data?
-    * Figures
-    * Tables
-    * Interactive
-    * Colors
+    * Figures? Tables?
+    * Interactive? Colors?
     
 :::
 
@@ -137,8 +135,19 @@ mlesion <- mlesions %>%
 
 ::: {.incremental}
 + Shiny App
-  - ![ ](Figures/GoogleSheetScreenshot.png)
-  - [Google Sheet](https://docs.google.com/spreadsheets/d/14DQFoUMEDOaiDwJbfivyRSpJ2rijGwO-wHohUgCWDIk/edit?usp=sharing)
+  - Web Application for Displaying Data
+  - [Getting Started with R](https://education.rstudio.com/learn/beginner/)
+  - [Installing RStudio](https://posit.co/download/rstudio-desktop/)
+  - [Shiny App Demos](https://shiny.posit.co/r/gallery/)
+  
+:::
+
+
+## Case Study in Statistical Graphics
+
+::: {.incremental}
++ Shiny App
+  - [![](Figures/GoogleSheetScreenshot.png)](https://docs.google.com/spreadsheets/d/14DQFoUMEDOaiDwJbfivyRSpJ2rijGwO-wHohUgCWDIk/edit?usp=sharing)
   - [Shiny App Code](https://github.com/nulloa/fortnitefridayShiny)
   - [Shiny App](https://nehemiasulloa.shinyapps.io/fortnitefridayShiny/)
   
